# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: cli.py  gendiff.py  parser.py  parsers.py  util.py
gendiff/formatters/: __init__.py  default.py  json.py  plain.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_test.py
gendiff/tests/fixtures/: test_after.json  test_after3.yml  test_before.json  test_result.txt  test_result_4.txt  test_result_5.txt  test_result_json1.txt  test_result_yml.txt
tests/: test_test.py
tests/fixtures/: test_after1.json  test_result_2.txt  test_result_4.txt  test_result_5.txt
