[tool.poetry]
name = "shafigullinik_gendiff"
version = "0.1.1"
description = ""
authors = ["shafigullinik <shafigullin.ik@gmail.com>"]
packages = [{include = 'gendiff'},]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
